# swagger_server/models/user.py
@@ -1,246 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class User(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, username: str=None, email_address: str=None, password: str=None, first_name: str=None, last_name: str=None, phone: str=None, sms: str=None, email: str=None):  # noqa: E501
-        """User - a model defined in Swagger
-
-        :param username: The username of this User.  # noqa: E501
-        :type username: str
-        :param email_address: The email_address of this User.  # noqa: E501
-        :type email_address: str
-        :param password: The password of this User.  # noqa: E501
-        :type password: str
-        :param first_name: The first_name of this User.  # noqa: E501
-        :type first_name: str
-        :param last_name: The last_name of this User.  # noqa: E501
-        :type last_name: str
-        :param phone: The phone of this User.  # noqa: E501
-        :type phone: str
-        :param sms: The sms preference of this User.  # noqa: E501
-        :type sms: str
-        :param email: The email preference of this User.  # noqa: E501
-        :type email: str
-        """
-        self.swagger_types = {
-            'username': str,
-            'email_address': str,
-            'password': str,
-            'first_name': str,
-            'last_name': str,
-            'phone': str,
-            'sms': str,
-            'email': str
-        }
-
-        self.attribute_map = {
-            'username': 'username',
-            'email_address': 'email_address',
-            'password': 'password',
-            'first_name': 'firstName',
-            'last_name': 'lastName',
-            'phone': 'phone',
-            'sms': 'sms',
-            'email': 'email'
-        }
-
-        self._username = username
-        self._email_address = email_address
-        self._password = password
-        self._first_name = first_name
-        self._last_name = last_name
-        self._phone = phone
-        self._sms = sms
-        self._email = email
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'User':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The User of this User.  # noqa: E501
-        :rtype: User
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def username(self) -> str:
-        """Gets the username of this User.
-
-
-        :return: The username of this User.
-        :rtype: str
-        """
-        return self._username
-
-    @username.setter
-    def username(self, username: str):
-        """Sets the username of this User.
-
-
-        :param username: The username of this User.
-        :type username: str
-        """
-
-        self._username = username
-
-    @property
-    def email_address(self) -> str:
-        """Gets the email_address of this User.
-
-
-        :return: The email_address of this User.
-        :rtype: str
-        """
-        return self._email_address
-
-    @email_address.setter
-    def email_address(self, email_address: str):
-        """Sets the email_address of this User.
-
-
-        :param email_address: The email_address of this User.
-        :type email_address: str
-        """
-
-        self._email_address = email_address
-
-    @property
-    def password(self) -> str:
-        """Gets the password of this User.
-
-
-        :return: The password of this User.
-        :rtype: str
-        """
-        return self._password
-
-    @password.setter
-    def password(self, password: str):
-        """Sets the password of this User.
-
-
-        :param password: The password of this User.
-        :type password: str
-        """
-
-        self._password = password
-
-    @property
-    def first_name(self) -> str:
-        """Gets the first_name of this User.
-
-
-        :return: The first_name of this User.
-        :rtype: str
-        """
-        return self._first_name
-
-    @first_name.setter
-    def first_name(self, first_name: str):
-        """Sets the first_name of this User.
-
-
-        :param first_name: The first_name of this User.
-        :type first_name: str
-        """
-
-        self._first_name = first_name
-
-    @property
-    def last_name(self) -> str:
-        """Gets the last_name of this User.
-
-
-        :return: The last_name of this User.
-        :rtype: str
-        """
-        return self._last_name
-
-    @last_name.setter
-    def last_name(self, last_name: str):
-        """Sets the last_name of this User.
-
-
-        :param last_name: The last_name of this User.
-        :type last_name: str
-        """
-
-        self._last_name = last_name
-
-    @property
-    def phone(self) -> str:
-        """Gets the phone of this User.
-
-
-        :return: The phone of this User.
-        :rtype: str
-        """
-        return self._phone
-
-    @phone.setter
-    def phone(self, phone: str):
-        """Sets the phone of this User.
-
-
-        :param phone: The phone of this User.
-        :type phone: str
-        """
-
-        self._phone = phone
-
-    @property
-    def sms(self) -> str:
-        """Gets the sms of this User.
-
-
-        :return: The sms of this User.
-        :rtype: str
-        """
-        return self._sms
-
-    @sms.setter
-    def sms(self, sms: str):
-        """Sets the sms of this User.
-
-
-        :param sms: The sms of this User.
-        :type sms: str
-        """
-
-        self._sms = sms
-
-    @property
-    def email(self) -> str:
-        """Gets the email of this User.
-
-
-        :return: The email of this User.
-        :rtype: str
-        """
-        return self._email
-
-    @email.setter
-    def email(self, email: str):
-        """Sets the email of this User.
-
-
-        :param email: The email of this User.
-        :type email: str
-        """
-
-        self._email = email
